# container_exercise

./: .gitignore  .gitmodules
c/: .gitignore  CMakeLists.txt  Makefile  Makefile.bak
c/include/: mount.h  netns.h  pathnames.h
c/sh/: common.sh  network-bridge.sh  network-macvlan.sh  network-vlan.sh  network.sh  run-dev.sh
c/src/: base.h  capability.c  capability.h  container.c  container.h  id_map.c  id_map.h  main.c  mount.c  mount.h  netns.c  pathnames.h
go/: .gitignore  Makefile
go/conf/: example-arch.toml  example.toml
go/csrc/: common.c  ipaddress.c  iplink.c  iproute.c  iptc.c  network.c
go/include/: cont_proto.h  ctype.go  network.h
go/src/: cflags.go  cgo.go  config.go  container.go  dhcp.go  exec_branch.go  filesystem.go  main.go  manager.go  msock.go  namespaces.go  namespaces_linux.go  network.go  pathnames.go  pathnames_linux.go  protocol.go  sysproc_linux.go
go/src/cgroup/: cgroup2.go
go/src/cnet/: cgo.go  dhcp.go  iproute2.go  network.go  socket.go
go/src/csys/: command.go  errors.go  mountinfo.go  pathnames.go
py/: common_util.py  example-network.json  network_bridge.py  network_helper.py  network_macvlan.py
